--- a/_posts/2020-01-03-Git学习笔记.md
+++ b/_posts/2020-01-03-Git学习笔记.md
@@ -1,5 +1,3 @@
-## Git学习笔记
-
 #### 工作目录、暂存区、版本历史
 
 git status  查看区域状态
@@ -9,4 +7,10 @@ git add <-u> file_name 从工作目录加入到暂存区，可加多个文件和
 git commit -m 'message' 将暂存区的内容加入到版本历史中
 
 git log 查看提交历史
+
+git mv oldName newName 重命名暂存区文件名
+
+git commit --amend 修改最近一次提交的message
+
+
 
