苏菲的世界 读书笔记

--- a/_posts/2021-01-03-读书笔记.md
+++ b/_posts/2021-01-03-读书笔记.md
@@ -1,1 +1,7 @@
 ### 读书笔记
+
+#### 苏菲的世界
+
+故事性不错的一本哲学入门书籍，看着玩玩还是不错的，介绍了西方从古到今的每一个哲学流派，不过介绍的很是泛泛就是了。
+
+对唯心主义和不可知论抱有一定的认同，但是还是更信服马克思的辩证唯物主义和黑格尔的批判性思维以及萨特为代表的存在主义。我的存在要比我是谁更为重要，吃饱穿暖要比我从哪来和我要去哪重要。
