--- a/_posts/2021-02-13-年度计划.md
+++ b/_posts/2021-02-13-年度计划.md
@@ -1,4 +1,4 @@
-### 2021.02.13-年度计划
+### 2021年度计划
 
 #### 工作
 
@@ -27,9 +27,9 @@
 
 #### 理财
 
-	1. 定投基金
- 	2. 年后破了3700就全部赎回，等着下跌再买
- 	3. 明年回来身上现金到20w
+1. 定投基金
+2. 年后破了3700就全部赎回，等着下跌再买
+3. 明年回来身上现金到20w
 
 #### 生活
 
